--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@reduxjs/toolkit": "^2.5.1",
         "react": "18.3.1",
         "react-native": "0.77.0",
+        "react-native-bootsplash": "^6.3.3",
         "react-native-device-info": "^14.0.2",
         "react-native-gesture-handler": "^2.22.1",
         "react-native-onboarding-swiper": "^1.3.0",
